--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Why F1nn5ter and Meowriza are a couple
 description: Last updated on 20-11-2022
 show_downloads: false
 is_project_page: false
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme
 relative_links:
